ビューの修正

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -35,10 +35,10 @@
             </h3>
             <div class='item-price'>
               <span><%= item.price %>円<br><%= item.del_charge.name %></span>
-              <div class='star-btn'>
-                <%= image_tag "star.png", class:"star-icon" %>
-                <span class='star-count'>0</span>
-              </div>
+              <%# <div class='star-btn'> %>
+                <%# <%= image_tag "star.png", class:"star-icon" %> %>
+                <%# <span class='star-count'>0</span> %>
+              <%# </div> %>
             </div>
           </div>
           <% end %>
@@ -55,9 +55,9 @@
             </h3>
             <div class='item-price'>
               <span>99999999円<br>(税込み)</span>
-              <div class='star-btn'>
-                <%= image_tag "star.png", class:"star-icon" %>
-                <span class='star-count'>0</span>
+              <%# <div class='star-btn'> %>
+                <%# <%= image_tag "star.png", class:"star-icon" %> %>
+                <%# <span class='star-count'>0</span> %>
               </div>
             </div>
           </div>
@@ -69,8 +69,5 @@
   </div>
   <%# /商品一覧 %>
 </div>
-<%= link_to(new_item_path, class: 'purchase-btn') do %>
-  <span class='purchase-btn-text'>出品する</span>
-  <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
-<% end %>
+<%= link_to '投稿する', new_item_path, class: 'purchase-btn' %>
 <%= render "shared/footer" %>
