--- a/app/assets/stylesheets/items/new.css
+++ b/app/assets/stylesheets/items/new.css
@@ -129,47 +129,13 @@
 
 /* /商品の詳細など */
 
-/* 販売価格 */
-.sell-price {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.price-content {
-  width: 300px;
-  border-bottom: 1px solid #ccc;
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.price-text {
-  /* min-width: 170px; */
-  display: flex;
-  align-items: center;
-}
-
-.sell-yen {
-  font-size: 18px;
-}
-
-.price-input {
-  height: 30px;
-  text-align: right;
-  padding-right: 10px;
-}
-
-/* /販売価格 */
-
 /* 下部ボタン */
 .sell-btn-contents {
   width: 100%;
   text-align: center;
 }
 
-.sell-btn {
+.post-btn {
   background: #ea352d;
   border: 1px solid #ea352d;
   color: #fff;
@@ -189,7 +155,7 @@
 
 /* /下部ボタン */
 
-.items-sell-footer {
+.items-post-footer {
   background-color: #f5f5f5;
   width: 60vw;
   padding: 3ch 0;
@@ -199,7 +165,7 @@
 }
 
 
-.items-sell-footer>.menu {
+.items-post-footer>.menu {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
