--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,18 +1,3 @@
-<%# 下部広告部分 %>
-<div class='ad-footer-contents'>
-  <p class='ad-footer-explain'>
-    おすすめのプレゼントをシェアできるアプリ
-  </p>
-  <h2 class='ad-footer-title'>
-    今すぐ無料ダウンロード！
-  </h2>
-  <div class='store-btn'>
-    <%= link_to image_tag("app-store.svg", class:"apple-btn"), "#" %>
-    <%= link_to image_tag("google-play.png", class:"google-btn"), "#" %>
-  </div>
-</div>
-<%# /下部広告部分 %>
-
 <div class='footer'>
   <div class='footer-contents'>
     <div class='furima-details'>
@@ -40,6 +25,6 @@
       </ul>
     </div>
   </div>
-  <%= link_to image_tag("furima-logo-white.png", class:"logo-white"), "#" %>
+  <%= link_to "Okurimono", "#", class:"logo-white" %>
   <p>© FURIMA</p>
 </div>
