--- a/app/assets/stylesheets/items/new.css
+++ b/app/assets/stylesheets/items/new.css
@@ -85,6 +85,18 @@
   min-width: 250px;
 }
 
+.preview-image {
+  width: 30vw;
+  margin: 0 auto 15px;
+}
+
+.image-delete-button {
+  text-align: center;
+  border: solid 1px;
+  cursor: pointer;
+  margin-bottom: 5px;
+}
+
 .click-upload>p {
   margin-bottom: 15px;
 }
