--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -25,22 +25,22 @@
 
       <% @items.each do |item| %>
         <li class='list'>
-          <%= link_to item_path(item.id) do %>
-          <div class='item-img-content'>
-            <%= image_tag item.image, class: "item-img" %>
-          </div>
-          <div class='item-info'>
-            <h3 class='item-name'>
-              <%= item.name %>
-            </h3>
-            <div class='item-price'>
-              <span><%= item.price %>円<br><%= item.del_charge.name %></span>
-              <%# <div class='star-btn'> %>
-                <%# <%= image_tag "star.png", class:"star-icon" %> %>
-                <%# <span class='star-count'>0</span> %>
-              <%# </div> %>
+          <%= link_to "#" do %>
+            <div class='item-img-content'>
+              <%= image_tag item.images[0], class: "item-img" %>
             </div>
-          </div>
+            <div class='item-info'>
+              <h3 class='item-name'>
+                <%= item.title %>
+              </h3>
+              <div class='item-price'>
+                <span><%= item.price.name %>円</span>
+                <%# <div class='star-btn'> %>
+                  <%# <%= image_tag "star.png", class:"star-icon" %> %>
+                  <%# <span class='star-count'>0</span> %>
+                <%# </div> %>
+              </div>
+            </div>
           <% end %>
         <% end %>
       </li>
