--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,9 +4,9 @@
     <%= link_to 'Okurimono', '/', class:"furima-icon" %>
     <form class="search-form" action="#">
       <input class='input-box' placeholder='キーワードから探す'>
-      <button class="search-button">
-        <%= image_tag "search.png", class:"search-icon" %>
-      </button>
+      <%# <button class="search-button"> %>
+        <%# <%= image_tag "search.png", class:"search-icon" %> %>
+      <%# </button> %>
     </form>
   </div>
   <div class='nav'>
