--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,13 @@
 <%= render "shared/second-header" %>
 
-<%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
+<%= form_with model: current_user, class: 'registration-main', local: true do |f| %>
   <div class='form-wrap'>
     <div class='form-header'>
       <h1 class='form-header-text'>
-        会員情報入力
+        アカウント情報の編集
       </h1>
+      <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'btn'%>
+      <%= link_to "チャットページに戻る", :back, class: 'btn'%>
     </div>
 
     <%= render 'shared/error_messages', model: f.object %>
@@ -77,7 +79,7 @@
       </h2>
     </div>
     <div class='register-btn'>
-      <%= f.submit "会員登録" ,class:"register-red-btn" %>
+      <%= f.submit "編集する" ,class:"register-red-btn" %>
     </div>
     <p class='register-info'>本人情報の登録について</p>
   </div>
