--- a/app/assets/stylesheets/shared/footer.scss
+++ b/app/assets/stylesheets/shared/footer.scss
@@ -28,11 +28,15 @@
   line-height: 30px;
 }
 
-.logo-white {
-  width: 20vh;
+.okurimono-footer {
+  font-size: 25px;
   vertical-align: bottom;
+  text-decoration: none;
+  text-align: center;
+  color: #31AB98;
 }
 
 .footer>p {
   font-size: 14px;
+  line-height: 50px;
 }
