--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -7,6 +7,7 @@
   padding: 2vh 15vw;
   display: flex;
   flex-direction: column;
+  background-color: #F9F7EF;
 }
 
 .search-bar-contents {
@@ -15,9 +16,12 @@
   align-items: center;
 }
 
-.furima-icon {
+.okurimono {
   width: 10vw;
   margin-right: 10vw;
+  text-decoration: none;
+  color: #31AB98;
+  font-size: 32px;
 }
 
 .search-form {
