--- a/app/views/shared/_second-footer.html.erb
+++ b/app/views/shared/_second-footer.html.erb
@@ -1,8 +1,8 @@
 <footer class='second-fotter'>
-  <div class='second-fotter-text-wrap'>
-    <p class='second-fotter-text'>プライバシーポリシー</p>
-    <p class='second-fotter-text'>Okurimono利用規約</p>
-    <p class='second-fotter-text'>特定商取引に関する表記</p>
-  </div>
-  <%= link_to 'Okurimono', '/', class:"second-fotter-logo" %>
+  <ul class='second-fotter-text-wrap'>
+    <li><%= link_to '会社概要（運営会社)', "#", class: "second-footer-text" %></li>
+    <li><%= link_to 'プライバシーポリシー', "#", class: "second-footer-text" %></li>
+    <li><%= link_to 'Okurimono利用規約', "#", class: "second-footer-text" %></li>
+  </ul>
+  <%= link_to 'Okurimono', '/', class:"second-footer-okurimono" %>
 </footer>
