--- a/app/views/shared/_second-header.html.erb
+++ b/app/views/shared/_second-header.html.erb
@@ -1,3 +1,3 @@
 <header class='second-header'>
-  <%= link_to 'Okurimono', '/', class:"second-header-logo" %>
+  <%= link_to 'Okurimono', '/', class:"second-header-okurimono" %>
 </header>
