--- a/app/assets/stylesheets/items/new.css
+++ b/app/assets/stylesheets/items/new.css
@@ -2,18 +2,13 @@
 
 
 .items-sell-contents {
-  background-color: #f5f5f5;
+  background-color: #F9F7EF;
   font-family: "Source Sans Pro", Helvetica, Arial, "æ¸¸ã‚´ã‚·ãƒƒã‚¯ä½“", "YuGothic", "ãƒ¡ã‚¤ãƒªã‚ª", "Meiryo", sans-serif;
   font-size: 14px;
   display: flex;
   align-items: center;
   flex-direction: column;
   min-width: 500px;
-}
-
-.items-sell-header {
-  padding: 5vh 0;
-  text-align: center;
 }
 
 .items-sell-main {
@@ -27,11 +22,22 @@
   font-size: 22px;
   font-weight: bold;
   text-align: center;
+  margin-bottom: 40px;
 }
 
 /* 共通 */
 .indispensable {
   background: #ea352d;
+  margin-left: 8px;
+  padding: 3px;
+  border-radius: 2px;
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.indispensable-opt {
+  background: #30B5BE;
   margin-left: 8px;
   padding: 3px;
   border-radius: 2px;
@@ -142,19 +148,20 @@
 /* /商品の詳細など */
 
 /* 下部ボタン */
-.sell-btn-contents {
+.post-btn-contents {
   width: 100%;
   text-align: center;
 }
 
 .post-btn {
-  background: #ea352d;
-  border: 1px solid #ea352d;
+  background: #F0CF16;
+  border: 1px solid #F0CF16;
   color: #fff;
   width: 100%;
   height: 50px;
-  font-size: 14px;
-  margin-bottom: 4vh;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 8vh;
 }
 
 .back-btn {
