--- a/app/assets/stylesheets/shared/second_fotter.css
+++ b/app/assets/stylesheets/shared/second_fotter.css
@@ -2,7 +2,7 @@
   width: 100%;
   min-width: 800px;
   height: 200px;
-  background-color: #f5f5f5;
+  background-color: #F9F7EF;
   display: flex;
   flex-direction: column;
 }
@@ -13,14 +13,17 @@
   justify-content: center;
 }
 
-.second-fotter-text {
+.second-footer-text {
   color: #333;
   font-size: 12px;
   margin: 0 10px;
+  text-decoration: none;
 }
 
-.second-fotter-logo {
-  width: 185px;
-  height: 49px;
-  margin: 0 auto;
+.second-footer-okurimono {
+  font-size: 25px;
+  vertical-align: bottom;
+  text-decoration: none;
+  text-align: center;
+  color: #31AB98;
 }
