--- a/app/assets/stylesheets/shared/second_header.css
+++ b/app/assets/stylesheets/shared/second_header.css
@@ -2,13 +2,16 @@
   width: 100%;
   min-width: 800px;
   height: 130px;
-  background-color: #f5f5f5;
+  background-color: #F9F7EF;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.second-logo {
+.second-header-okurimono {
   width: 185px;
   height: 49px;
+  text-decoration: none;
+  color: #31AB98;
+  font-size: 32px;
 }
