--- a/app/assets/stylesheets/user/registration.css
+++ b/app/assets/stylesheets/user/registration.css
@@ -9,7 +9,7 @@
 
 /* form-wrapは商品購入画面でも使用しています */
 .form-wrap {
-  width: 50%;
+  width: 60%;
   background-color: white;
   padding-bottom: 70px;
 }
@@ -18,7 +18,7 @@
   width: 100%;
   height: 120px;
   text-align: center;
-  font-size: 22px;
+  font-size: 20px;
 }
 
 .form-header-text {
@@ -132,13 +132,14 @@
   margin: 0 auto;
 }
 
-.register-red-btn {
+.register-yrw-btn {
   width: 100%;
-  background: #ea352d;
-  border: 1px solid #ea352d;
+  background: #F0CF16;
+  border: 1px solid #F0CF16;
   color: #fff;
   line-height: 48px;
-  font-size: 14px;
+  font-size: 16px;
+  font-weight: bold;
   cursor: pointer;
 }
 
