--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,26 +5,24 @@
       <ul>
         <li><%= link_to '会社概要（運営会社)', "#", class: "footer-link" %></li>
         <li><%= link_to 'プライバシーポリシー', "#", class: "footer-link" %></li>
-        <li><%= link_to 'FURIMA利用規約', "#", class: "footer-link" %></li>
-        <li><%= link_to 'ポイントに関する特約', "#", class: "footer-link" %></li>
+        <li><%= link_to 'Okurimono利用規約', "#", class: "footer-link" %></li>
       </ul>
     </div>
     <div class='furima-details'>
       <h2 class='footer-content-head'>Okurimonoを見る</h2>
       <ul>
-        <li><%= link_to 'カテゴリー一覧', "#", class: "footer-link" %></li>
-        <li><%= link_to 'ブランド一覧', "#", class: "footer-link" %></li>
+        <li><%= link_to 'カテゴリ一覧', "#", class: "footer-link" %></li>
+        <li><%= link_to 'タグ一覧', "#", class: "footer-link" %></li>
       </ul>
     </div>
     <div class='furima-details'>
       <h2 class='footer-content-head'>Okurimonoについて</h2>
       <ul>
         <li><%= link_to 'Okurimonoガイド', "#", class: "footer-link" %></li>
-        <li><%= link_to 'Okurimonoロゴ利用ガイドライン', "#", class: "footer-link" %></li>
         <li><%= link_to 'お知らせ', "#", class: "footer-link" %></li>
       </ul>
     </div>
   </div>
-  <%= link_to "Okurimono", "#", class:"logo-white" %>
-  <p>© FURIMA</p>
+  <%= link_to "Okurimono", "#", class:"okurimono-footer" %>
+  <p>© Okurimono</p>
 </div>
