--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,18 +1,18 @@
 <%# CSS・・・assets/stylesheets/shared/header.css %>
 <header class='top-page-header'>
   <div class='search-bar-contents'>
-    <%= link_to 'Okurimono', '/', class:"furima-icon" %>
-    <form class="search-form" action="#">
-      <input class='input-box' placeholder='キーワードから探す'>
+    <%= link_to 'Okurimono', '/', class:"okurimono" %>
+    <%# <form class="search-form" action="#"> %>
+      <%# <input class='input-box' placeholder='キーワードから探す'> %>
       <%# <button class="search-button"> %>
-        <%# <%= image_tag "search.png", class:"search-icon" %> %>
+        <%# <%= image_tag "search.png", class:"search-icon" %>
       <%# </button> %>
-    </form>
+    <%# </form> %>
   </div>
   <div class='nav'>
     <ul class='lists-left'>
-      <li><%= link_to 'カテゴリー', "#", class: "category-list" %></li>
-      <li><%= link_to 'ブランド', "#", class: "brand-list" %></li>
+      <li><%= link_to 'カテゴリ', "#", class: "category-list" %></li>
+      <li><%= link_to 'タグ', "#", class: "brand-list" %></li>
     </ul>
     <ul class='lists-right'>
       <% if user_signed_in? %>
