--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -18,7 +18,7 @@
     </div>
     <div class="item-price-box">
       <span class="item-price">
-        ¥ <%= @item.price %>
+        <%= @item.price.name %>
       </span>
       <span class="item-postage">
         <%= @item.del_charge.name %>
