--- a/app/assets/stylesheets/items/index.scss
+++ b/app/assets/stylesheets/items/index.scss
@@ -87,12 +87,14 @@ a {
 
 .item-name {
   font-size: 2.5vh;
+  text-decoration: none;
 }
 
 .item-price {
   font-size: 1.5vh;
   display: flex;
   justify-content: space-between;
+  text-decoration: none;
 }
 
 
