--- a/app/assets/stylesheets/items/show.css
+++ b/app/assets/stylesheets/items/show.css
@@ -64,14 +64,15 @@
 }
 
 
-.item-red-btn {
+.item-yrw-btn {
   text-align: center;
-  background-color: #ea352d;
+  background-color: #F0CF16;
   font-size: 24px;
   font-weight: bold;
   color: #FFF;
   margin: 20px 0px;
   padding: 2vh 10vw;
+  text-decoration: none;
 }
 
 .or-text {
@@ -208,13 +209,13 @@
 .change-item-btn {
   font-size: 30px;
   text-decoration: none;
-  color: #3CCACE;
+  color: #31AB98;
 }
 
 .another-item {
   display: block;
   margin: 30px 0px 8px;
-  color: #3CCACE;
+  color: #31AB98;
   text-decoration: none;
   font-weight: bold;
   font-size: 23px;
