--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -2,12 +2,10 @@
 app/assets/stylesheets/items/new.css %>
 
 <div class="items-sell-contents">
-  <header class="items-sell-header">
-    <%= link_to image_tag('furima-logo-color.png' , size: '185x50'), "/" %>
-  </header>
+  <%= render "shared/second-header" %>
   
   <div class="items-sell-main">
-    <h2 class="items-sell-title">商品の情報を入力</h2>
+    <h2 class="items-sell-title">シェアする商品の情報を入力</h2>
     
     <%= form_with(model: @item, local: true) do |f| %>
 
@@ -30,10 +28,10 @@ app/assets/stylesheets/items/new.css %>
       <%# 商品名と商品説明 %>
       <div class="new-items">
         <div class="weight-bold-text">
-          商品名
+          タイトル
           <span class="indispensable">必須</span>
         </div>
-        <%= f.text_area :name, class:"items-text", id:"item-name", placeholder:"商品名（必須 40文字まで)", maxlength:"40" %>
+        <%= f.text_area :title, class:"items-text", id:"item-name", placeholder:"商品名（必須 40文字まで)", maxlength:"40" %>
         <div class="items-explain">
           <div class="weight-bold-text">
             商品の説明
@@ -46,116 +44,46 @@ app/assets/stylesheets/items/new.css %>
 
       <%# 商品の詳細 %>
       <div class="items-detail">
-        <div class="weight-bold-text">商品の詳細</div>
+        <div class="weight-bold-text">投稿詳細</div>
         <div class="form">
           <div class="weight-bold-text">
-            カテゴリー
-            <span class="indispensable">必須</span>
+            価格帯
+          <span class="indispensable">必須</span>
           </div>
-          <%= f.collection_select(:category_id, Category.all, :id, :name, {}, {class:"select-box", id:"item-category"}) %>
+          <%= f.collection_select(:price_id, Price.all, :id, :name, {}, {class:"select-box", id:"item-category"}) %>
           <div class="weight-bold-text">
-            商品の状態
+            カテゴリ
             <span class="indispensable">必須</span>
           </div>
-          <%= f.collection_select(:status_id, Status.all, :id, :name, {}, {class:"select-box", id:"item-sales-status"}) %>
+          <%= f.collection_select(:genre_id, Genre.all, :id, :name, {}, {class:"select-box", id:"item-category"}) %>
+          <div class="weight-bold-text">
+            タグ
+            <span class="indispensable">必須</span>
+          </div>
+          <%# <%= f.collection_select(:status_id, Status.all, :id, :name, {}, {class:"select-box", id:"item-sales-status"}) %> 
+          <p>※下記どちらか一方を必ず入力してください。</p>
+          <div class="weight-bold-text">
+            ショップURL
+            <span class="indispensable-opt">どちらか必須</span>
+          </div>
+          <%= f.text_area :shop_url, class:"items-text", id:"item-tag", placeholder:"オンラインショップもしくは販売店のURLを入力" %>
+          <div class="weight-bold-text">
+            販売店の住所
+            <span class="indispensable-opt">どちらか必須</span>
+          </div>
+          <%= f.text_area :shop_address, class:"items-text", id:"item-tag", placeholder:"販売店舗がある場合、店舗の住所を入力してください" %>    
         </div>
       </div>
       <%# /商品の詳細 %>
 
-      <%# 配送について %>
-      <div class="items-detail">
-        <div class="weight-bold-text question-text">
-          <span>配送について</span>
-          <a class="question" href="#">?</a>
-        </div>
-        <div class="form">
-          <div class="weight-bold-text">
-            配送料の負担
-            <span class="indispensable">必須</span>
-          </div>
-          <%= f.collection_select(:del_charge_id, DelCharge.all, :id, :name, {}, {class:"select-box", id:"item-shipping-fee-status"}) %>
-          <div class="weight-bold-text">
-            発送元の地域
-            <span class="indispensable">必須</span>
-          </div>
-          <%= f.collection_select(:prefecture_id, Prefecture.all, :id, :name, {}, {class:"select-box", id:"item-prefecture"}) %>
-          <div class="weight-bold-text">
-            発送までの日数
-            <span class="indispensable">必須</span>
-          </div>
-          <%= f.collection_select(:del_day_id, DelDay.all, :id, :name, {}, {class:"select-box", id:"item-scheduled-delivery"}) %>
-        </div>
-      </div>
-      <%# /配送について %>
-
-      <%# 販売価格 %>
-      <div class="sell-price">
-        <div class="weight-bold-text question-text">
-          <span>販売価格<br>(¥300〜9,999,999)</span>
-          <a class="question" href="#">?</a>
-        </div>
-        <div>
-          <div class="price-content">
-            <div class="price-text">
-              <span>価格</span>
-              <span class="indispensable">必須</span>
-            </div>
-            <span class="sell-yen">¥</span>
-            <%= f.text_field :price, class:"price-input", id:"item-price", placeholder:"例）300" %>
-          </div>
-          <div class="price-content">
-            <span>販売手数料 (10%)</span>
-            <span>
-              <span id='add-tax-price'></span>円
-            </span>
-          </div>
-          <div class="price-content">
-            <span>販売利益</span>
-            <span>
-              <span id='profit'></span>円
-            </span>
-          </div>
-        </div>
-      </div>
-      <%# /販売価格 %>
-
-      <%# 注意書き %>
-      <div class="caution">
-        <p class="sentence">
-          <a href="#">禁止されている出品、</a>
-          <a href="#">行為</a>
-          を必ずご確認ください。
-        </p>
-        <p class="sentence">
-          またブランド品でシリアルナンバー等がある場合はご記載ください。
-          <a href="#">偽ブランドの販売</a>
-          は犯罪であり処罰される可能性があります。
-        </p>
-        <p class="sentence">
-          また、出品をもちまして
-          <a href="#">加盟店規約</a>
-          に同意したことになります。
-        </p>
-      </div>
-      <%# /注意書き %>
       <%# 下部ボタン %>
-      <div class="sell-btn-contents">
-        <%= f.submit "変更する", class:"sell-btn" %>
+      <div class="post-btn-contents">
+        <%= f.submit "変更する", class:"post-btn" %>
         <%= link_to 'もどる', item_path(@item), class:"back-btn" %>
       </div>
       <%# /下部ボタン %>
     <% end %>
   </div>
 
-  <footer class="items-sell-footer">
-    <ul class="menu">
-      <li><a href="#">プライバシーポリシー</a></li>
-      <li><a href="#">フリマ利用規約</a></li>
-      <li><a href="#">特定商取引に関する表記</a></li>
-    </ul>
-    <%= link_to image_tag('furima-logo-color.png' , size: '185x50'), "/" %>
-    <p class="inc">
-      ©︎Furima,Inc.
-    </p>
-  </footer>
+  <%= render "shared/second-footer" %>
 </div>
