--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -22,9 +22,9 @@
 
       <% @items.each do |item| %>
         <li class='list'>
-          <%= link_to "#" do %>
+          <%= link_to item_path(item.id) do %>
             <div class='item-img-content'>
-              <%= image_tag item.image, class: "item-img" if item.image.attached? %>
+              <%= image_tag item.images[0], class: "item-img" if item.images.attached? %>
             </div>
             <div class='item-info'>
               <h3 class='item-name'>
